--- a/blueprint.yaml
+++ b/blueprint.yaml
@@ -1,55 +1,37 @@
-apiVersion: qualitorque.io/v1
-kind: Blueprint
-metadata:
-  name: eks-demo-blueprint
-  description: "EKS cluster deployment blueprint"
-spec:
-  grains:
-    - name: eks-cluster
-      type: terraform
-      path: ./
+spec_version: 2
+description: "EKS cluster deployment blueprint"
+
+inputs:
+  region:
+    type: string
+    default: us-east-1
+  cluster_name:
+    type: string
+    default: yana-eks-demo
+  vpc_id:
+    type: string
+    default: vpc-066d45cb6f15cce6e
+  subnet_ids:
+    type: string
+    default: "subnet-04b1589da0f453bf0,subnet-024c12ca933afee95"
+
+outputs:
+  cluster_endpoint:
+    value: '{{ .grains.eks-cluster.outputs.cluster_endpoint }}'
+    quick: true
+  cluster_name:
+    value: '{{ .grains.eks-cluster.outputs.cluster_name }}'
+    quick: true
+
+grains:
+  eks-cluster:
+    kind: terraform
+    spec:
+      source:
+        store: github
+        path: ./
       inputs:
-        region: us-east-1
-        cluster_name: yana-eks-demo
-        vpc_id: vpc-066d45cb6f15cce6e
-        subnet_ids:
-          - subnet-04b1589da0f453bf0
-          - subnet-024c12ca933afee95
-  
-  environments:
-    devbox:
-      inputs:
-        region: us-east-1
-        cluster_name: yana-eks-devbox
-        vpc_id: vpc-066d45cb6f15cce6e
-        subnet_ids:
-          - subnet-04b1589da0f453bf0
-          - subnet-024c12ca933afee95
-      tags:
-        - environment: development
-        - team: engineering
-        - temporary: true
-    
-    staging:
-      inputs:
-        region: us-east-1
-        cluster_name: yana-eks-staging
-        vpc_id: vpc-066d45cb6f15cce6e
-        subnet_ids:
-          - subnet-04b1589da0f453bf0
-          - subnet-024c12ca933afee95
-      tags:
-        - environment: staging
-        - team: development
-    
-    production:
-      inputs:
-        region: us-east-1
-        cluster_name: yana-eks-prod
-        vpc_id: vpc-066d45cb6f15cce6e
-        subnet_ids:
-          - subnet-04b1589da0f453bf0
-          - subnet-024c12ca933afee95
-      tags:
-        - environment: production
-        - team: platform
+        - region: '{{ .inputs.region }}'
+        - cluster_name: '{{ .inputs.cluster_name }}'
+        - vpc_id: '{{ .inputs.vpc_id }}'
+        - subnet_ids: '{{ .inputs.subnet_ids }}'
