--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -14,8 +14,8 @@ environment:
     subnet_ids: "subnet-04b1589da0f453bf0,subnet-024c12ca933afee95"
   outputs:
     cluster_endpoint:
-      value: '{{ .grains.eks-cluster.outputs.cluster_endpoint }}'
+      value: '{{ .grains.eks_cluster.outputs.cluster_endpoint }}'
       quick: true
     cluster_name:
-      value: '{{ .grains.eks-cluster.outputs.cluster_name }}'
+      value: '{{ .grains.eks_cluster.outputs.cluster_name }}'
       quick: true
