--- a/blueprint.yaml
+++ b/blueprint.yaml
@@ -38,8 +38,8 @@ grains:
     kind: terraform
     spec:
       source:
-        store: git
-        path: ./eks
+        store: IaC-Presentation  # the connected Git repository name
+        path: .  # path to the Terraform files in the root directory
       host:
         name: '{{ .inputs.agent | default: "torque-agent-torqueagent02-dtvkcccjj" }}'
       inputs:
